--- a/Research-Works.html
+++ b/Research-Works.html
@@ -372,7 +372,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <a href="https://www.techscience.com/journal/csse" class="u-active-palette-2-base u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-white u-radius-50 u-btn-4" target="_blank"><b>Journal Link</b>
+                                <a href="https://www.techscience.com/csse/v49n1/63444" class="u-active-palette-2-base u-border-none u-btn u-btn-round u-button-style u-custom-color-3 u-hover-white u-radius-50 u-btn-4" target="_blank"><b>Journal Link</b>
                                 </a>
                             </div>
                         </div>
