--- a/Teaching.html
+++ b/Teaching.html
@@ -112,7 +112,7 @@
                 <div class="u-repeater u-repeater-1">
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-container-layout-1">
-                            <h3 class="u-custom-item u-hover-feature u-text u-text-1">Fall 2023 (current)</h3>
+                            <h3 class="u-custom-item u-hover-feature u-text u-text-1">Fall 2023</h3>
                             <p class="u-custom-item u-text u-text-2"> CSEC 444:&nbsp;Machine Learning Lab&nbsp;<br> CSEC 426:&nbsp;Artificial Intelligence Lab<br>CSE 0613103:&nbsp;Data Structures and Algorithms<br>CSE 0613104:&nbsp;Data Structures and Algorithms Lab <br>CSEC 225:&nbsp;Microprocessor Interfacing and Low-Level Language<br>CSEC 226:&nbsp;Microprocessor Interfacing and Low-Level Lang. Lab
                             </p>
                         </div>
