--- a/Teaching.html
+++ b/Teaching.html
@@ -110,6 +110,17 @@
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-list u-list-1">
                 <div class="u-repeater u-repeater-1">
+
+                    <div class="u-container-style u-list-item u-repeater-item">
+                        <div class="u-container-layout u-similar-container u-container-layout-2">
+                            <h3 class="u-custom-item u-hover-feature u-text u-text-3">Fall 2025 (Current)&nbsp;<br>
+                            </h3>
+                            <p class="u-custom-item u-text u-text-4">CSE0613207:&nbsp;Java Programming&nbsp;<br>CSE0613208:&nbsp;Java Programming Lab<br>CSE0612303:&nbsp;Data Communication<br>CSE0613307:&nbsp;System Configuration and Performance Evaluation<br>
+                            </p>
+                            </p>
+                        </div>
+                    </div>
+                    
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-container-layout-1">
                             <h3 class="u-custom-item u-hover-feature u-text u-text-1">Fall 2023</h3>
