--- a/index.html
+++ b/index.html
@@ -432,7 +432,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <h3 class="u-hover-feature u-text u-text-1"><span class="u-file-icon u-icon"><img src="images/2303915.png" alt=""></span>&nbsp;Experience
             </h3>
             <p class="u-text u-text-2" data-animation-out="0">
-                <span class="u-text-palette-1-base">[March 2024 - Ongoing]</span> Research Assistant&nbsp;<span style="font-weight: 700;"> Software Languages and Systems Laboratory for Security, South Korea.</span><br>
+                <span class="u-text-palette-1-base">[September 2026 - Ongoing]</span> Lecturer, Department of Computer Science and Engineering, <span style="font-weight: 700;">UTTARA UNIVERSITY</span>
+                <span class="u-text-palette-1-base">[March 2024 - August 2025]</span> Research Assistant&nbsp;<span style="font-weight: 700;"> Software Languages and Systems Laboratory for Security, South Korea.</span><br>
                 <span class="u-text-palette-1-base">[September 2022 - February 2024]</span> Lecturer, Department of Computer Science and Engineering, <span style="font-weight: 700;">UTTARA UNIVERSITY</span>
                 <span class="u-text-palette-4-base">
             <a href="Teaching.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-4-base u-btn-1">[courses]&nbsp;</a>
