--- a/Co-curricular.html
+++ b/Co-curricular.html
@@ -165,7 +165,110 @@
             </div>
         </div>
     </section>
+
+	<!-- ✅ INSERT START: Web Development & Design Showcase -->
+<section class="u-align-center u-clearfix u-grey-80 u-valign-middle-xs u-section-3" id="carousel_webdev">
+  <div class="u-clearfix u-sheet u-sheet-1">
     
+    <div class="u-align-center u-container-style u-group u-palette-2-base u-shape-rectangle u-group-1">
+      <div class="u-container-layout u-valign-middle u-container-layout-1">
+        <h2 class="u-text u-text-body-color u-text-1"
+            data-animation-name="flipIn"
+            data-animation-duration="1000"
+            data-animation-delay="0"
+            data-animation-direction="X">
+          Web Development & Design Showcase
+        </h2>
+      </div>
+    </div>
+
+    <div class="u-layout-grid u-list u-list-1">
+      <div class="u-repeater u-repeater-1">
+
+        <!-- 1) Sign Up Page -->
+        <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-shape-rectangle">
+          <div class="u-container-layout u-similar-container u-container-layout-2">
+            <h4 class="u-text u-text-default u-text-palette-3-dark-2">
+              Sign Up Page (HTML &amp; CSS) —
+              <a href="https://monircse061.github.io/Sign-Up-Page/"
+                 class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-5-base u-text-palette-1-base"
+                 target="_blank" rel="noopener">
+                Live Demo
+              </a>
+            </h4>
+            <p class="u-text u-text-palette-1-dark-2">A clean, responsive sign-up UI built with pure HTML and CSS.</p>
+          </div>
+        </div>
+
+        <!-- 2) Cool Landing Page -->
+        <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-shape-rectangle">
+          <div class="u-container-layout u-similar-container u-container-layout-2">
+            <h4 class="u-text u-text-default u-text-palette-3-dark-2">
+              Cool Landing Page —
+              <a href="https://monircse061.github.io/Cool-Landing-Page/"
+                 class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-5-base u-text-palette-1-base"
+                 target="_blank" rel="noopener">
+                Live Demo
+              </a>
+            </h4>
+            <p class="u-text u-text-palette-1-dark-2">A modern landing page layout showcasing UI structure and styling.</p>
+          </div>
+        </div>
+
+        <!-- 3) Business Landing Page -->
+        <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-shape-rectangle">
+          <div class="u-container-layout u-similar-container u-container-layout-2">
+            <h4 class="u-text u-text-default u-text-palette-3-dark-2">
+              Business Landing Page —
+              <a href="https://monircse061.github.io/Business-Landing-Page/"
+                 class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-5-base u-text-palette-1-base"
+                 target="_blank" rel="noopener">
+                Live Demo
+              </a>
+            </h4>
+            <p class="u-text u-text-palette-1-dark-2">A business-style webpage design demonstrating professional layout patterns.</p>
+          </div>
+        </div>
+
+        <!-- 4) Portfolio Page -->
+        <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-shape-rectangle">
+          <div class="u-container-layout u-similar-container u-container-layout-2">
+            <h4 class="u-text u-text-default u-text-palette-3-dark-2">
+              My Portfolio Page —
+              <a href="https://monircse061.github.io/my_portfolio/"
+                 class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-5-base u-text-palette-1-base"
+                 target="_blank" rel="noopener">
+                Live Demo
+              </a>
+            </h4>
+            <p class="u-text u-text-palette-1-dark-2">A personal portfolio website highlighting projects and profile information.</p>
+          </div>
+        </div>
+
+        <!-- 5) Behance -->
+        <div class="u-align-center u-container-style u-grey-5 u-list-item u-repeater-item u-shape-rectangle">
+          <div class="u-container-layout u-similar-container u-container-layout-2">
+            <h4 class="u-text u-text-default u-text-palette-3-dark-2">
+              Behance (Design Portfolio) —
+              <a href="https://www.behance.net/monirahammod"
+                 class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-hover-palette-5-base u-text-palette-1-base"
+                 target="_blank" rel="noopener">
+                View Profile
+              </a>
+            </h4>
+            <p class="u-text u-text-palette-1-dark-2">A curated collection of UI/UX and visual design work on Behance.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- ✅ INSERT END: Web Development & Design Showcase -->
+
+
+	
     <section class="u-align-center u-clearfix u-grey-80 u-section-5" src="" id="sec-2446">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
             <h1 class="u-text u-title u-text-1">Achievements, Awards, and Scholarship</h1>
